Added a2jmidid captures and some minor tweaks, still need 0.90.1 material.

--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-09-07
+% \update      2016-11-30
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -132,11 +132,11 @@
       Instead, specify the file itself as the last command-line argument.
 
    \optionpar{-m}{--manual-alsa-ports}
-      \textsl{Sequencer64} won't attach ALSA ports.
+      \textsl{Sequencer64} won't attach the system's existing ALSA ports.
       Instead, it will create is own set of input and output busses/ports.
 
    \optionpar{-a}{--auto-alsa-ports}
-      \textsl{Sequencer64} will attach ALSA ports.
+      \textsl{Sequencer64} will attach the system's existing ALSA ports.
       This variant is useful for overriding the rc configuration file.
 
    \optionpar{-r}{--reveal-alsa-ports}
