--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -209,6 +209,9 @@
    "user" configuration file only if
    the manual-alsa-ports option is on, which is necessary if one
    wants to use \textsl{Sequencer64} with JACK.
+
+   THE ABOVE MIGHT NOT BE TRUE!  I MAY BE MISTAKEN!!!
+
    The \texttt{user-midi-bus-definitions} and \texttt{user-midi-bus-N} sections
    are misleading if one wants to have access to the
    actual ALSA ports that exist on the system.
