--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-11-12
+% \update      2017-03-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -17,7 +17,7 @@
 \section{Patterns Panel}
 \label{sec:seq64_patterns_panel}
 
-   \textsl{Sequencer64} works with the idea of patterns (loops, track, or
+   \textsl{Sequencer64} works with patterns (loops, track, or
    sequences) that are repeated all along a song.  One composes and edits small
    patterns, and combines them to create a full song.  This is a powerful way
    to work, and makes one productive within an hour.
@@ -53,8 +53,8 @@
    \sectionref{paragraph:seq64_menu_file_options_jack_sync}).
 
    Back to the patterns panel....  For exposition, we break the Patterns Panel
-   into a menu bar, a top panel, a pattern panel, and a bottom panel.  (Note
-   that the \textsl{Sequencer64} menu bar was already discussed in
+   into a menu bar, a top panel, a pattern panel, and a bottom panel.
+   (The \textsl{Sequencer64} menu bar is discussed in
    \sectionref{sec:seq64_menu}.)
 
 \subsection{Patterns / Top Panel}
@@ -1002,9 +1002,9 @@
    \begin{enumber}
       \item \textbf{Stop}
       \item \textbf{Play}
-      \item \textbf{Pause} (new)
+      \item \textbf{Pause}
       \item \textbf{BPM}
-      \item \textbf{Tap Tempo} (to-do: not yet shown)
+      \item \textbf{Tap Tempo}
       \item \textbf{Name}
       \item \textbf{Set}
       \item \textbf{Toggle Song Editor}
