--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-06-25
+% \update      2017-03-11
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -97,6 +97,12 @@
    \emph{Platform Independent Library for MIDI I/O}
    \url{http://portmedia.sourceforge.net/portmidi/}
    2010.
+
+   \bibitem{rtmidi}
+   Gary P. Scavone
+   \emph{The RtMIDI Tutorial}
+   \url{https://www.music.mcgill.ca/~gary/rtmidi/}
+   2016.
 
    \bibitem{seq24}
    Seq24 Team.
