--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-11-12
+% \update      2017-03-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.9.21}
+\title{Sequencer64 User Manual 0.90.1}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -78,13 +78,14 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.9.21,
-   using the latest commit from the
-   \textbf{master} or \textbf{fixups} branches.
+   \cite{sequencer64}, through version 0.90.1,
+   using the latest commit from the \textbf{master} branch.
+%  \textbf{master} or \textbf{fixups} branches.
    If one is impatient to get started mastering \textsl{Sequencer64},
    then proceed to \sectionref{subsec:introduction_lets_get_started}.
 
-   \textsl{Sequencer64} fixes some bugs in JACK support, MIDI clocking, and
+   \textsl{Sequencer64} has added native JACK MIDI support,
+   and it fixes some bugs in JACK transport, MIDI clocking, and
    JACK Master mode (with code from the \textsl{SooperLooper} 
    and \textsl{Seq32} projects).
    However, as user \textsl{stazed} notes on GitHub, there is more that can be
@@ -94,7 +95,8 @@
    There is now a Pause button/keystroke.
    More editing and navigation can be done using keystrokes.
    The armed/mute status of all of the \textsl{other} active patterns can be
-   toggled.  All playing patterns can be muted, then unmuted.
+   toggled.
+%  All playing patterns can be muted, then unmuted.
    We've got zoom keys for the editors, current-sequence highlighting,
    important bug fixes, some optimization, and much more.
 
@@ -113,17 +115,18 @@
    \textsl{Seq24} was a very active project, with a
    number of contributors, who created patches, additional
    functionality, and even ports to Windows.
-   We searched assiduously for these updates, and
-   incorporated most of them into \textsl{Sequencer64} where feasible.
+   We searched for these updates, and
+   incorporated them into \textsl{Sequencer64} where feasible.
    There are still some things to be done, including a port to
-   Windows/Portmidi.
+   Windows.
 
    \textsl{Sequencer64} is not a synthesizer.  It requires a hardware
    synthesizer, or a software synthesizer such as Timidity \cite{timidity},
    FluidSynth \cite{fluidsynth}, ZynAddSubFX \cite{zynaddsubfx}, Yoshimi
-   \cite{yoshimi} \cite{yoshimi2}, AmSynth \cite{amsynth}, Bristol
-   \cite{bristol}, and others (see \cite{linuxsynths} for a fairly
-   comprehensive list of "Linux" synthesizers).
+   \cite{yoshimi} \cite{yoshimi2}, etc.
+%  AmSynth \cite{amsynth}, Bristol \cite{bristol}, and others
+   See \cite{linuxsynths} for a long
+   list of "Linux" synthesizers).
 
    \textsl{Sequencer64}, like \textsl{Seq24},
    works a bit like an \textsl{Alesis SR16} drum machine,
@@ -147,14 +150,15 @@
    The first reason to reboot \textsl{Seq24} is consolidation of many of the
    features and fixes that it has accumulated in various forks over the years.
    Also, although "feature-complete", additional features would be useful, such
-   as support for more session managers, more use of keystrokes, work-arounds
-   for the need for two mouse buttons, a more up-to-date user-interface
-   framework, more comprehensive undo/redo, bug fixes, beefing up the
-   support for the "user" configuration file, and a way to edit parts of the
-   MIDI file textually.
+   as support for modern session managers, more use of keystrokes,
+%  work-arounds for the need for two mouse buttons,
+%  a more modern user-interface framework,
+   more comprehensive undo/redo,
+   bug fixes, improving the "user" configuration file,
+   and a way to edit parts of the MIDI file textually.
 
    Secondly, we view \textsl{Seq24} as a kind of "vi" of MIDI editing... spare,
-   lean, and powerful.  It deserves to be a living project.  Thus, without
+   lean, and powerful.  It deserves to be a living project.  Without
    \textsl{Seq24} and its authors, \textsl{Sequencer64} would never have come
    into being.
 
@@ -165,10 +169,11 @@
    \textsl{Sequencer64}.
 
    \begin{itemize}
+      \item The newest update is native JACK MIDI support!  At last!
       \item A new \textsl{event editor} dialog
          provides viewing and editing of MIDI events as text.
          This editor is basic, but useful.
-      \item \textsl{Sequencer64} reads SMF 0 MIDI files, splitting
+      \item \textsl{Sequencer64} now reads SMF 0 MIDI files, splitting
          the file into patterns based on channel number.
       \item A "Tap" button sets the BPM by tapping a button or a key.
       \item Some features have been ported from \textsl{Stazed}'s
@@ -311,15 +316,15 @@
    faster, and easier to modify.  Eventually, we might get it to build
    for Windows, using MingW, though this is a low priority and a fairly
    significant task.  We've also been asked to incorporate support for native
-   JACK MIDI, a scripting language, for OSC (Open Sound Control), and for NSM
-   (the Non Session Manager).
+   JACK MIDI (\textbf{Done!}), a scripting language, for OSC (Open Sound
+   Control), and for NSM (the Non Session Manager).
 
    One more note.  \textsl{Sequencer64} is extremely customizable, and
    it features can be configured by defining macro names in the source code,
    by enabling/disabling options at build-configuration time, and by many new
    command-line arguments.  We cannot show all permutations of settings in this
    document, so don't be surprised if some screenshots don't quite match
-   your setup.
+   one's setup.
 
 \subsection{Document Structure}
 \label{subsec:introduction_document_structure}
@@ -366,24 +371,30 @@
    which complicates the discussion of \textsl{Sequencer64}.  The first
    thing to do is make sure one has no other sound application running
    (unless one wants to risk blocking \textsl{Sequencer64} or hearing two
-    sounds simultaneously, depending on one's sound card and ALSA setup).
-   Then start \textsl{Sequencer64} so that it uses ALSA for MIDI.  Provide a
+   sounds simultaneously, depending on one's sound card and ALSA setup).
+   Then start \textsl{Sequencer64} so that it uses JACK for MIDI.  Provide a
    default MIDI file so that all elements of the user interface can come
    into play.  Also use the "\&" character so that we get back to the
    command-line prompt.  Finally, on our system the main synthesizer
    (\textsl{Yoshimi}) comes up on MIDI buss 5, so we add an option to remap
    all events to that buss:
 
+%  $ sequencer64 --alsa --bus 5 contrib/midi/b4uacuse-seq24.midi &
+
 \begin{verbatim}
-   $ sequencer64 --alsa --bus 5 contrib/midi/b4uacuse-seq24.midi &
+   $ seq64 --jack-midi --bus 5 contrib/midi/b4uacuse-seq24.midi &
 \end{verbatim}
+
+   If the \texttt{--alsa} option is used instead of
+   \texttt{--jack-midi}, then the "Native" button will show "ALSA" instead.
 
 \begin{figure}[H]
    \centering 
 %  \includegraphics[scale=0.75]{seq64-first-screen.png}
 %  \includegraphics[scale=0.75]{new/seq64_first_screen.png}
-   \includegraphics[scale=0.75]{seq64-first-screen-new-buttons.png}
-   \caption{Sequencer64 Main Screen, 0.9.18}
+%  \includegraphics[scale=0.75]{seq64-first-screen-new-buttons.png}
+   \includegraphics[scale=0.75]{new/seq64-first-screen-jack.png}
+   \caption{Sequencer64 Main Screen, Native JACK MIDI}
    \label{fig:seq64_main_screen}
 \end{figure}
 
@@ -394,12 +405,12 @@
    and much more that is not shown.
    Most of these items can be configured via the "rc" and "user" configuration
    files or command-line options.
-   Note that the buttons show icons in the figure, but the application is
-   normally configured to show labels:  "Live" or "Song", "Mute", and "Menu".
-   One new item (v. 0.9.19) not shown is the mode of the application:
-   "JACK", "Master" (i.e. JACK Master), or "ALSA".
-   A new item that \textsl{is} shown is the button with a "0" as its label.
-   This is the new \textbf{Tap Tempo} button.
+   Note that the buttons show labels in the figure:
+   "Live" or "Song", "Mute", "Menu", and "JACK", "ALSA", or "Native" (native
+   JACK MIDI.
+   Another new item that \textsl{is} shown is the button with a "0" as its label.
+   This is the new \textbf{Tap Tempo} button (see
+   \sectionref{subsec:seq64_patterns_panel_bottom} for more information).
 
 % This Tip needs to be put elsewhere.
 
@@ -468,8 +479,8 @@
 \input{seq64_kudos}
 
 % Discussion of JACK support
-%
-% \input{seq64_jack}
+
+\input{seq64_jack}
 
 % Detailed discussion of how internal variables alter the appearance
 % of Sequencer64.
