Manual for Sequencer64 v. 0.90.1 ready.

--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-10-06
+% \update      2017-03-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -14,7 +14,7 @@
 %
 %-------------------------------------------------------------------------------
 
-\section{Sequencer64 User Configuration File}
+\section{Sequencer64 "usr" Configuration File}
 \label{sec:seq64_usr_file}
 
    The \textsl{Sequencer64} configuration file provides a way to give more
@@ -153,7 +153,7 @@
    \sectionref{subsec:seq64_usr_file_midi_bus_results}, and 
    see what it all looks like.
 
-\subsection{Sequencer64 User / MIDI Bus Definitions}
+\subsection{Sequencer64 "usr" File / MIDI Bus Definitions}
 \label{subsec:seq64_usr_file_midi_bus_definitions}
 
    \index{[user-midi-bus-definitions]}
@@ -219,7 +219,7 @@
    definitions in the "user" configuration file are \textsl{not} read from that
    file.
 
-\subsection{Sequencer64 User / MIDI Instrument Definitions}
+\subsection{Sequencer64 "usr" File / MIDI Instrument Definitions}
 \label{subsec:seq64_usr_file_midi_instrument_definitions}
 
    \index{[user-instrument-definitions]}
@@ -318,7 +318,7 @@
    The sample file \texttt{contrib/scripts/dot-seq24usr} contains examples
    of some other kinds of instruments, such as drum machines.
 
-\subsection{Sequencer64 User / User Interface Settings}
+\subsection{Sequencer64 "usr" File / User Interface Settings}
 \label{subsec:seq64_usr_file_user_interface_settings}
 
    \index{[user-interface-settings]}
@@ -469,7 +469,7 @@
    than anything else.  It probably doesn't affect CPU usage much, but might
    provide a smoother-running cursor on some systems.
 
-\subsection{Sequencer64 User / User MIDI Settings}
+\subsection{Sequencer64 "usr" File / User MIDI Settings}
 \label{subsec:seq64_usr_file_user_midi_settings}
 
    \index{[user-midi-settings]}
@@ -512,7 +512,7 @@
       -1      # midi_buss_override
    \end{verbatim}
 
-\subsection{Sequencer64 User / Results}
+\subsection{Sequencer64 "usr" File / Results}
 \label{subsec:seq64_usr_file_midi_bus_results}
 
    Okay, now we have this file copied to our home directory:
